# The-Ultimate-OmniBuilder-Agent-Blueprint

./: .gitignore  BLUEPRINT.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: README.md  run_all.py
examples/data_analysis/: README.md
examples/hello_world/: README.md
examples/rest_api/: README.md
src/omnibuilder/: __init__.py  agent.py  cli.py  config.py  llm_providers.py  memory_enhanced.py  models.py
src/omnibuilder/core/: __init__.py  error_handler.py  formatter.py  generator.py  memory_ltm.py  memory_stm.py  planner.py  reasoning.py  selector.py
src/omnibuilder/environment/: __init__.py  codebase.py  filesystem.py  ide.py  local_llm.py  safety.py  terminal.py
src/omnibuilder/tools/: __init__.py  cloud.py  communication.py  data.py  debugging.py  version_control.py  visualization.py  web_research.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
tests/core/: __init__.py  test_planner.py  test_selector.py
tests/environment/: __init__.py  test_filesystem.py  test_safety.py  test_terminal.py
